--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          Happy birthday to youu!!
+          Be Happy. be Awesome. May peace be upon you. Happy Birthday ! 
         </p>
         <p class="fake-btn">Send</p>
       </div>
