--- a/index.html
+++ b/index.html
@@ -30,24 +30,25 @@
     </div>
 
     <div class="three">
-      <p>It's your birthday!! :D</p>
+      <p>Selamat hari lahir!! :D</p>
     </div>
 
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          Be Happy. be Awesome. May peace be upon you. Happy Birthday ! 
+          semoga aa jadi anak yang soleh seperti nama bapak,
+          berbakti sama mamah dan abah, nenek juga jangan lupa wkwk
         </p>
         <p class="fake-btn">Send</p>
       </div>
     </div>
 
     <div class="five">
-      <p class="idea-1">That's what I was going to do.</p>
-      <p class="idea-2">But then I stopped.</p>
+      <p class="idea-1">.</p>
+      <p class="idea-2">.</p>
       <p class="idea-3">
-        I realised, I wanted to do something<br>
-        <strong>special</strong>
+        <br>
+        <strong></strong>
         .
       </p>
       <p class="idea-4">Because,</p>
@@ -65,7 +66,7 @@
       <img src="img/hat.svg" alt="hat" class="hat" />
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May allah always be with you! ;)</h5>
+        <h5 id="wishText">berkah selalu ;)</h5>
       </div>
     </div>
 
@@ -138,8 +139,8 @@
     </div>
 
     <div class="nine">
-      <p>Okay, now come back and tell me if you liked it.</p>
-      <p id="replay">Or click, if you want to watch it again.</p>
+      <p>Okay, sekian.</p>
+      <p id="replay">dan terima gaji.</p>
       <p class="last-smile">:)</p>
     </div>
   </div>
