--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          semoga aa jadi anak yang soleh seperti nama bapak,
-          berbakti sama mamah dan abah, nenek juga jangan lupa wkwk
+         Best wishes for you
         </p>
         <p class="fake-btn">Send</p>
       </div>
