--- a/index.html
+++ b/index.html
@@ -24,19 +24,22 @@
     <div class="one">
       <h1 class="one">
         Hi
-        <span id="name"></span>
+        <span id="name">Princess Elyana</span>
       </h1>
       <p class="two" id="greetingText"></p>
     </div>
 
     <div class="three">
-      <p>Selamat hari lahir!! :D</p>
+      <p>Today is your day :D</p>
     </div>
 
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-         Best wishes for you
+         Happy Birthday to one of the nicest people i have ever met.
+          You are a Joy to be friends with :)
+          May your day be as beautiful as you <3<3<3
+          Best wishes for you El...
         </p>
         <p class="fake-btn">Send</p>
       </div>
