--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="one">
       <h1 class="one">
         Hi
-        <span id="name">Princess Elyana</span>
+        <span id="name"></span>
       </h1>
       <p class="two" id="greetingText"></p>
     </div>
@@ -36,9 +36,9 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-         Happy Birthday to one of the nicest people i have ever met.
-          You are a Joy to be friends with :)
-          May your day be as beautiful as you <3<3<3
+         Happy Birthday to one of the nicest people i have ever met
+          You are a Joy to be friends with
+          May your day be as beautiful as you
           Best wishes for you El...
         </p>
         <p class="fake-btn">Send</p>
