--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-         Happy Birthday to one of the nicest people i have ever met
-          You are a Joy to be friends with
-          May your day be as beautiful as you
+         Happy Birthday to one of the nicest people i have ever met,
+          You are a Joy to be friends with.
+          May your day be as beautiful as youuuuuu ;)
           Best wishes for you El...
         </p>
         <p class="fake-btn">Send</p>
@@ -51,7 +51,6 @@
         <h5 id="wishText">berkah selalu ;)</h5>
       </div>
     </div>
-
     <div class="seven">
       <div class="baloons">
         <img src="img/ballon2.svg" alt="" />
