--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         Hi
         <span id="name"></span>
       </h1>
-      <p class="two" id="greetingText"></p>
+      <p class="two" id="imagePath"></p>
     </div>
 
     <div class="three">
