--- a/index.html
+++ b/index.html
@@ -44,11 +44,30 @@
         <p class="fake-btn">Send</p>
       </div>
     </div>
-    <div class="six">
+       <div class="five">
+      <p class="idea-1">That's what I was going to do.</p>
+      <p class="idea-2">But then I stopped.</p>
+      <p class="idea-3">
+        I realised, I wanted to do something<br>
+        <strong>special</strong>
+        .
+      </p>
+      <p class="idea-4">Because,</p>
+      <p class="idea-5">
+        You are Special
+        <span>:)</span>
+      </p>
+      <p class="idea-6">
+        <span>S</span>
+        <span>O</span>
+      </p>
+    </div>
+<div class="six">
+      <img src="./img/ito.jpeg" alt="profile" class="profile-picture" id="imagePath"/>
       <img src="img/hat.svg" alt="hat" class="hat" />
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">berkah selalu ;)</h5>
+        <h5 id="wishText">May God always be with you! ;)</h5>
       </div>
     </div>
     <div class="seven">
