--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Happy Birthday!!! :)</title>
+  <title>Happy Birthday Ajushi!!! :)</title>
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
@@ -30,16 +30,15 @@
     </div>
 
     <div class="three">
-      <p>Today is your day :D</p>
+      <p>9 July is your day, I am sorry to late:D</p>
     </div>
 
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-         Happy Birthday to one of the nicest people i have ever met,
-          You are a Joy to be friends with.
-          May your day be as beautiful as youuuuuu ;)
-          Best wishes for you El...
+         Happy Birthday to my favourite human in the world,
+           Missing you more than ever on your special day💕 
+          Best wishes for you...
         </p>
         <p class="fake-btn">Send</p>
       </div>
@@ -63,7 +62,7 @@
       </p>
     </div>
 <div class="six">
-      <img src="./img/ito.jpeg" alt="profile" class="profile-picture" id="imagePath"/>
+      <img src="./img/Davron.jpg" alt="profile" class="profile-picture" id="imagePath"/>
       <img src="img/hat.svg" alt="hat" class="hat" />
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
@@ -139,8 +138,8 @@
     </div>
 
     <div class="nine">
-      <p>Okay, sekian.</p>
-      <p id="replay">dan terima gaji.</p>
+      <p>You are loved</p>
+      <p id="replay">sarangheyoooooooo tapi kamu tidak huhuhu </p>
       <p class="last-smile">:)</p>
     </div>
   </div>
